Added device agnostic code

--- a/Depression_classification_v1.ipynb
+++ b/Depression_classification_v1.ipynb
@@ -6169,11 +6169,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#uncomment if you need to move the tensors and the model to the GPU\n",
-        "#X_train = X_train.to('cuda')\n",
-        "#X_test = X_test.to('cuda')\n",
-        "#y_train, y_test = y_train.to('cuda'), y_test.to('cuda')\n",
-        "#model_v1 = model_v1.to('cuda')"
+        "X_train = X_train.to(device)\n",
+        "X_test = X_test.to(device)\n",
+        "y_train, y_test = y_train.to(device), y_test.to(device)\n",
+        "model_v1 = model_v1.to(device)"
       ],
       "metadata": {
         "id": "s0Keo1mPFqzr"
